--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-	"name" : "user-management",
+	"name" : "node-chat",
 	"version" : "0.0.1",
-	"description" : "Simple user management module.",
+	"description" : "Simple Chat server.",
 	"dependencies" : {
 		"express" : "3.3.7",
+		"socket.io" : "1.3.8",
 		"mongoose" : "3.6.18",
 		"underscore" : "1.5.1",
-		"jade" : "0.35.0",
-		"passport" : "0.1.17",
-		"passport-local" : "0.1.6"
+		"jade" : "0.35.0"
 	}
 }
