Redis and session store

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
 	"description" : "Simple Chat server.",
 	"dependencies" : {
 		"express" : "3.3.7",
-		"socket.io" : "1.3.8",
+		"socket.io" : "0.9.16",
 		"mongoose" : "3.6.18",
 		"underscore" : "1.5.1",
-		"jade" : "0.35.0"
+		"jade" : "0.35.0",
+		"session.socket.io" : "latest",
+		"redis" : "latest",
+		"connect-redis": "latest"
 	}
 }
